--- a/MapAndLoc.html
+++ b/MapAndLoc.html
@@ -502,7 +502,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIX4S9zK8DNxs5Lj6vXJSWmufAMrv_LAw&libraries=places"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=[your_API_KEY]&libraries=places"></script>
 
     <script>
       function openEditModal() {
